# golem-gpu-info

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
examples/: show_gpu_info.rs
src/: amd.rs  cuda.rs  lib.rs  model.rs  platform.rs
