[package]
name = "golem-gpu-info"
version = "0.1.0"
edition = "2021"
readme = "README.md"
publish = false

[features]
default=['cuda']
cuda=['nvml-wrapper']
amd=['rocm_smi_lib']

[dependencies]
nvml-wrapper = {  version = "0.10", optional = true }
rocm_smi_lib = { version = "0.2.2", optional = true }
serde = { version = "1.0", features=['derive'] }
thiserror = "1.0.58"
libloading = "0.8.3"
static_assertions = "1.1.0"

[dev-dependencies]
serde_json = "1.0.117"
vulkano = "0.34.1"

[profile.release]
panic = "abort"
lto = "fat"
